# liga-muertos

./: .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VISION.md
.github/: LABELS.md  NEWCOMERS.md  PULL_REQUEST_TEMPLATE.md  TESTING.md  mlc_config.json
.github/GOOD_FIRST_ISSUES/: 001-readme-troubleshooting.md  002-loading-spinner.md  003-error-messages.md  004-dependency-updates.md  005-mobile-navigation.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  coverage.yml  pre-commit.yml
back/: .env.example  .rustfmt.toml  Cargo.toml  README.md
back/examples/: error_handling_demo.rs  logging_demo.rs  surrealdb_await_pattern.rs  test_connection.rs
back/src/: lib.rs  main.rs
back/src/entities/: mod.rs  participant.rs  tournament.rs  user.rs
back/src/routes/: mod.rs
back/src/routes/health/: mod.rs
back/src/utils/: logging.rs  mod.rs
back/src/utils/error/: mod.rs  validation.rs
front/: .env.example  .gitignore  README.md  biome.json  components.json  package.json  svelte.config.js  vite.config.ts
front/.storybook/: preview.ts
front/locales/en/: account.json  auth.json  legals.json  translation.json
front/locales/es/: account.json  auth.json  legals.json  translation.json
front/project.inlang/: project_id  settings.json
front/src/: app.d.ts  app.html  hooks.server.ts
front/src/logic/: config.ts  tournament.test.ts
front/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
front/src/stories/: button.stories.svelte  page.svelte  (+2 more)
(+62 files in other folders)
