[package]
name = "liga-muertos-back"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.11.0"
# JSON serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
# Authentication
clerk-rs = "0.4.1"
# HTTP client
reqwest = { version = "0.12.22", features = ["json"] }
# Environment variables
dotenvy = "0.15.7"
# Date and time
chrono = "0.4.41"
# Logging
log = "0.4.22"
env_logger = "0.11.8"
# Error handling
thiserror = "1.0.64"
surrealdb = { version = "2.3.7", features = ["protocol-ws", "protocol-http"] }

[dev-dependencies]
# Mock HTTP requests for testing external APIs
wiremock = "0.6"
# Parameterized testing and fixtures
rstest = "0.21"
# Coverage reporting
cargo-llvm-cov = "0.6"

[lib]
name = "liga_muertos_back"
path = "src/lib.rs"

[[bin]]
name = "liga-muertos-back"
path = "src/main.rs"

[profile.test]
debug = true
